--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
   "default": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "parcel build index.html --dist-dir ./dist"
+    "build": "parcel build index.html --dist-dir ./dist",
+    "test": "jest"
   },
   "author": "Esdras Silva",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-react": "^7.16.7",
     "@parcel/transformer-sass": "^2.3.1",
+    "@testing-library/dom": "^8.13.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "babel-jest": "^28.1.0",
+    "jest": "^28.1.0",
     "parcel": "^2.3.1",
     "postcss": "^8.4.13",
     "sass": "^1.49.7",
